@@ -1312,7 +1312,7 @@ i[34567]86-*-pe | i[34567]86-*-cygwin*)
 	xm_defines=POSIX
 	xm_file=i386/xm-cygwin.h
 	tmake_file=i386/t-cygwin
-	tm_file=i386/cygwin.h
+	tm_file="${tm_file} i386/unix.h i386/bsd.h i386/gas.h dbxcoff.h i386/cygwin.h"
 	extra_objs=winnt.o
 	if test x$enable_threads = xyes; then
 		thread_file='win32'
@@ -1320,7 +1320,7 @@ i[34567]86-*-pe | i[34567]86-*-cygwin*)
 	exeext=.exe
 	;;
 i[34567]86-*-mingw32*)
-	tm_file=i386/mingw32.h
+	tm_file="${tm_file} i386/unix.h i386/bsd.h i386/gas.h dbxcoff.h i386/cygwin.h i386/mingw32.h"
 	xm_defines=POSIX
 	xm_file=i386/xm-mingw32.h
 	tmake_file="i386/t-cygwin i386/t-mingw32"
@@ -1338,7 +1338,7 @@ i[34567]86-*-mingw32*)
 	esac
 	;;
 i[34567]86-*-uwin*)
-	tm_file="i386/cygwin.h i386/uwin.h"
+	tm_file="${tm_file} i386/unix.h i386/bsd.h i386/gas.h dbxcoff.h i386/cygwin.h i386/uwin.h"
 	tmake_file="i386/t-cygwin i386/t-uwin"
 	extra_objs=winnt.o
 	if test x$enable_threads = xyes; then
